Fixes #924 - [Questionnaire] The 'Mobile web message' field is too close to the 'Voice message' field.

--- a/web/static/css/_forms.scss
+++ b/web/static/css/_forms.scss
@@ -116,6 +116,7 @@ label {
 .audio-section {
   position: relative;
   padding-left: 10px;
+  margin-bottom: 40px;
   .audio-dropdown {
     display: inline-block;
     width: 25%;
